Make the build runnable and testable on JDK7/JDK9
Signed-off-by:Lukas Jungmann <lukas.jungmann@oracle.com>